# space-pirates

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Space Pirates DB Diagram.sql  WarpEngine.sln  app.js  package-lock.json  package.json  spacepirates-design.md
SpacePirates/: CMakeLists.txt  Main.cpp  SpacePirates.vcxproj  SpacePirates.vcxproj.filters  lamp.frag  light.frag  normal.frag  normal.vert  rainbow.frag  rainbow.vert  test.vert  yellow.frag
SpacePirates/levels/: CMakeLists.txt  TestLevel.cpp  TestLevel.h
WarpEngine/: CMakeLists.txt  Camera.cpp  Camera.h  GameWindow.cpp  GameWindow.h  Level.cpp  Level.h  ObjectMesh.cpp  ObjectMesh.h  Shader.cpp  Shader.h  VertexData.cpp  VertexData.h  WarpEngine.cpp  WarpEngine.h  WarpEngine.sln  WarpEngine.vcxproj  WarpEngine.vcxproj.filters  _warpEngine.h  glad.c  glslLoader.cpp  glslLoader.h  stdafx.cpp  vAttribute.cpp  vAttribute.h
WarpEngine/SpacePirates/: Main.cpp  SpacePirates.vcxproj
WarpEngine/WarpEngine/: GameWindow.cpp  WarpEngine.h  WarpEngine.vcxproj  WarpEngine.vcxproj.filters
WarpEngine/glad/: glad.h
public/: index.html
routes/: message.js
src/: App.vue  Login.vue  main.js
src/components/: Login.vue  Screen.vue  Terminal.vue
src/models/: Message.js  Player.js  Ship.js
